dev/cluster-reliability/otel-operator-chart/templates/otel-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opentelemetry-operator
  namespace: openshift-opentelemetry-operator
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.7.1.171/32
    - ipBlock:
        cidr: 10.7.1.172/32
    - ipBlock:
        cidr: 10.7.1.173/32
  - ports:
    - port: 6443
      protocol: TCP
    - port: 443
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
      podSelector:
        matchLabels:
          apiserver: "true"
  - {}
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-operator
  policyTypes:
  - Ingress
  - Egress
